<resources>
    <string name="app_name">Parstagram</string>
    <string name="textview">TextView</string>
    <string name="hint">hint</string>
    <string name="button">Button</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take picture</string>
    <string name="submit">Submit</string>
    <string name="picturetaken">pictureTaken</string>
    <string name="logout">logout</string>
    <string name="log_out">log out</string>
    <string name="kevin">Kevin</string>
    <string name="image">Image</string>
    <string name="an_iguana">An Iguana</string>
</resources>
