<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="none"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCaptureImage"
        android:text="@string/take_picture"/>

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/picturetaken"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out" />

</LinearLayout>