<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kevin"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/an_iguana"
        android:layout_marginBottom="16dp"/>
</LinearLayout>